#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package Translator
#------------------------------------------------------------------------

Package author: David A. Schneider

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-02-57
2016-8-18 David Schneider
- fix bug in size of ctrl int16, caused weird crash when running from batch JIRA PSAS-259

Tag: V00-02-56
2016-8-6 David Schneider
- follow psana_test and use /tmp for output during testing

Tag: V00-02-55
2016-7-1 David Schneider
- fix bug
	
Tag: V00-02-54
2016-6-22 David Schneider
- add configuration options - detmethod, can be raw,image or calib, and
  convert_to_int16 to clip and convert.
- report timing for detector interface.
	
Tag: V00-02-53
2016-6-20 David Schneider
- incorporate detector xface images into Translation JIRA PSAS-246

Tag: V00-02-52
2016-6-14 David Schneider
- disable unit test on rhel5 because build machine is too loaded

Tag: V00-02-51
2016-6-13 David Schneider
- update to pdsdata 8.6.12 for Partition::ConfigV2 JIRA PSAS-241

Tag: V00-02-50
2016-6-2 David Schneider
- update to pdsdata 8.6.10 with BldDataEOrbitsV0 JIRA PSAS-239
  and smldata fix PSAS-237

Tag: V00-02-49
2016-4-20 David Schneider
- rewrite unit test that failed. PSAS-236

Tag: V00-02-48
2016-4-19 David Schneider
- remove unit test that fails on rhel5 debug: PSAS-236

Tag: V00-02-47
2016-4-18 David Schneider
- update to pdsdata 8.6.8 with Andor::ConfigV2 JIRA PSAS-229

Tag: V00-02-46
2016-4-14 David Schneider
- add translator support (with unit test) for generic1d JIRA PSAS-225

Tag: V00-02-45
2016-4-14 David Schneider
- add unit test for ocean optics datav3 JIRA PSAS-227
	
Tag: V00-02-44
2016-4-4 David Schneider
- update to pdsdata 8.6.7 but only support UsdUsb::Fex* at this time,
  no support for Generic1D yet - JIRA PSAS-225