@@ -11,6 +11,10 @@ Package author: David A. Schneider
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-02-58
+2016-09-08 Mikhail Dubrovin
+- fix doxy-doc problems in H5MpiTranslateApp.h and SplitScanMgr.h
+
 Tag: V00-02-57
 2016-8-18 David Schneider
 - fix bug in size of ctrl int16, caused weird crash when running from batch JIRA PSAS-259
